--- a/theme/css/bootstrap-theme.css
+++ b/theme/css/bootstrap-theme.css
@@ -102,6 +102,13 @@ a:active {
     width: 100%;
     height:100%;
 }
+.header .menu-container.fixed{
+    background: rgba(9,9,9,0.8);
+    position: fixed;
+    left: 0;
+    right:0;
+    z-index:5;
+}
 .header .menu{
     background: #23679b;
     width: calc(100% - 100px);
