--- a/themes/frontend/css/bootstrap-theme.css
+++ b/themes/frontend/css/bootstrap-theme.css
@@ -43,6 +43,9 @@ a:active {
     background-size: cover;
     overflow: hidden;
 }
+.top-section.inner{
+    height:255px;
+}
 .header{
     position: relative;
     padding-top: 170px;
@@ -95,12 +98,41 @@ a:active {
     height:106px;
     z-index:2;
 }
+.menu-container .name-pic{
+    position: relative;
+    float: right;
+    background-size: auto 60px;
+    bottom: auto;
+    right:auto;
+    height:60px;
+    width: 187px;
+    margin: 5px 0;
+}
 .top-section .name-pic a{
     position: absolute;
     left:0;
     top: 0;
     width: 100%;
     height:100%;
+}
+.menu-container{
+    background: rgba(9,9,9,0.8);
+    position: fixed;
+    left: 0;
+    right:0;
+    top: 0;
+    width: 100%;
+    height:70px;
+    z-index:5;
+
+    -webkit-transition: all 0.8s;
+    -moz-transition: all 0.8s;
+    -ms-transition: all 0.8s;
+    -o-transition: all 0.8s;
+    transition: all 0.8s;
+}
+.menu-container.on-top{
+    top: -70px;
 }
 .header .menu{
     background: #23679b;
@@ -110,16 +142,29 @@ a:active {
     clear: both;
     border-radius: 5px 0 0 0;
 }
+.menu-container .menu{
+    overflow: hidden;
+}
+.menu-container .menu ul,
 .header .menu ul{
     padding: 0;
     margin: 0;
     overflow: hidden;
 }
+.menu-container .menu ul{
+    margin-right: 30px;
+    height:70px;
+}
+.menu-container .menu li,
 .header .menu li{
     list-style: none;
     float: right;
     margin-left: 15px;
 }
+.menu-container .menu li{
+    height:70px;
+}
+.menu-container .menu li a,
 .header .menu li a{
     color: #fff;
     padding: 10px 5px;
@@ -127,6 +172,10 @@ a:active {
     position: relative;
     font-size: 12px;
 }
+.menu-container .menu li a{
+    line-height:50px;
+}
+.menu-container .menu li a::before,
 .header .menu li a::before{
     content: '';
     position: absolute;
@@ -142,9 +191,11 @@ a:active {
     -o-transition: all 0.4s;
     transition: all 0.4s;
 }
+.menu-container .menu li a:hover,
 .header .menu li a:hover{
     color: #f7c000;
 }
+.menu-container .menu li a:hover::before,
 .header .menu li a:hover::before{
     background: #f7c000;
 }
@@ -571,6 +622,8 @@ a:active {
 .footer-section .footer-block{
     display: inline-block;
     padding: 0 20px;
+    width: 16.3333%;
+    vertical-align: top;
 }
 .footer-section .footer-block:first-child{
     padding-right: 0;
@@ -625,4 +678,25 @@ a:active {
     height:50%;
     border-bottom: 2px solid #31af91;
     border-radius: 10px;
+}
+.mobile-menu-trigger{
+    width: 50px;
+    height:50px;
+    margin: 10px 0;
+    background: url("../svg/menu.svg") no-repeat center left;
+    background-size: 30px;
+    float: left;
+}
+.overlay{
+    position: fixed;
+    background: rgba(0,0,0,0.7);
+    width: 100%;
+    height:100%;
+    top: 0;
+    left:0;
+    z-index:10;
+    display: none;
+}
+.context{
+    padding: 70px 0;
 }
