--- a/themes/frontend/css/bootstrap-theme.css
+++ b/themes/frontend/css/bootstrap-theme.css
@@ -1,8 +1,3 @@
-@import url(http://fonts.googleapis.com/earlyaccess/droidarabickufi.css);
-@import url(http://fonts.googleapis.com/earlyaccess/droidarabicnaskh.css);
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
-@import url(https://fonts.googleapis.com/css?family=Orbitron);
-
 * {
     outline: none !important;
 }
@@ -191,11 +186,15 @@ a:active {
     -o-transition: all 0.4s;
     transition: all 0.4s;
 }
+.menu-container .menu li.active a,
 .menu-container .menu li a:hover,
+.header .menu li.active a,
 .header .menu li a:hover{
     color: #f7c000;
 }
+.menu-container .menu li.active a::before,
 .menu-container .menu li a:hover::before,
+.header .menu li.active a::before,
 .header .menu li a:hover::before{
     background: #f7c000;
 }
@@ -357,18 +356,20 @@ a:active {
 .service-item h4{
     margin: 0 0 15px;
     font-weight: bold;
+    color: #222;
 }
 .service-item .content{
     padding: 15px 5px 5px;
     border-radius: 10px;
-
+    color: #222;
     -webkit-transition: all 0.4s;
     -moz-transition: all 0.4s;
     -ms-transition: all 0.4s;
     -o-transition: all 0.4s;
     transition: all 0.4s;
 }
-.service-item .content:hover{
+.service-item .content:hover,
+.service-item .content:hover h4{
     background: #80ab3c;
     color: #fff;
 }
@@ -497,10 +498,20 @@ a:active {
     border-bottom: 1px solid rgba(255,255,255,0.33);
     width: 100%;
     padding: 10px 5px;
-    color: rgba(255,255,255,0.33);
+    color: #fff;
     line-height:25px;
     height:46px;
     resize: vertical;
+}
+::-moz-placeholder,
+::-webkit-input-placeholder{
+    color: rgba(255,255,255,0.33);
+}
+.bottom-section .form-container select{
+    color: #fff;
+}
+.bottom-section .form-container select option{
+    color: #333;
 }
 .bottom-section .form-container textarea::placeholder,
 .bottom-section .form-container input::placeholder{
@@ -699,4 +710,81 @@ a:active {
 }
 .context{
     padding: 70px 0;
+}
+.page-title{
+    font-weight: bolder;
+    margin-bottom: 30px;
+    display: inline-block;
+    max-width: 800px;
+    width: 100%;
+    text-align: right;
+}
+.page-title h3{
+    max-width: 800px;
+    display: inline-block;
+}
+
+.page-text{
+    min-height: 100vh;
+    max-width: 800px;
+    display: inline-block;
+    overflow: hidden;
+    line-height: 30px;
+    font-size: 10pt;
+    text-align: justify;
+}
+
+.page-image{
+    max-width: 800px;
+    display: inline-block;
+    margin-bottom: 30px;
+}
+.page-image img{
+    -webkit-box-shadow:  1px 1px 4px rgba(0,0,0,0.3);
+    -moz-box-shadow:  1px 1px 4px rgba(0,0,0,0.3);
+    box-shadow:  1px 1px 4px rgba(0,0,0,0.3);
+    max-width: 100%;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    display: inline-block;
+    overflow: hidden;
+}
+
+.abs-alert{
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+    left: 50%;
+    max-width: 100%;
+    -webkit-transform: translate(-50%, 0);
+    -moz-transform: translate(-50%, 0);
+    -ms-transform: translate(-50%, 0);
+    -o-transform: translate(-50%, 0);
+    transform: translate(-50%, 0);
+    opacity: 0;
+    visibility: hidden;
+    border-radius: 0;
+    padding: 8px 15px;
+    max-width: 90vw;
+    -webkit-transition: all .42s cubic-bezier(.694, .048, .335, 1) 0s;
+    -moz-transition: all .42s cubic-bezier(.694, .048, .335, 1) 0s;
+    -o-transition: all .42s cubic-bezier(.694, .048, .335, 1) 0s;
+    transition: all .42s cubic-bezier(.694, .048, .335, 1) 0s;
+    text-transform: none;
+}
+
+.abs-alert.show{
+    -webkit-transform: translate(-50%, 30px);
+    -moz-transform: translate(-50%, 30px);
+    -ms-transform: translate(-50%, 30px);
+    -o-transform: translate(-50%, 30px);
+    transform: translate(-50%, 30px);
+    opacity: 1;
+    visibility: visible;
+}
+.errorMessage {
+    color: #a00;
+    font-size: 12px;
+    white-space: nowrap;
 }
