--- a/themes/frontend/css/fontiran.css
+++ b/themes/frontend/css/fontiran.css
@@ -1,4 +1,8 @@
-﻿@font-face {
+﻿@import url(http://fonts.googleapis.com/earlyaccess/droidarabickufi.css);
+@import url(http://fonts.googleapis.com/earlyaccess/droidarabicnaskh.css);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
+@import url(https://fonts.googleapis.com/css?family=Orbitron);
+@font-face {
 	font-family: IRANSans;
 	font-style: normal;
 	font-weight: bold;
