--- a/themes/frontend/css/bootstrap-theme.css
+++ b/themes/frontend/css/bootstrap-theme.css
@@ -136,42 +136,40 @@ a:active {
     padding-right: 180px;
     clear: both;
     border-radius: 5px 0 0 0;
+    height: 37px;
 }
-.menu-container .menu{
-    overflow: hidden;
-}
-.menu-container .menu ul,
-.header .menu ul{
+.menu-container .menu >ul,
+.header .menu >ul{
     padding: 0;
     margin: 0;
-    overflow: hidden;
+    display: inline-block;
 }
-.menu-container .menu ul{
+.menu-container .menu >ul{
     margin-right: 30px;
     height:70px;
 }
-.menu-container .menu li,
-.header .menu li{
+.menu-container .menu >ul>li,
+.header .menu>ul >li{
     list-style: none;
     float: right;
     margin-left: 15px;
 }
-.menu-container .menu li{
+.menu-container .menu>ul>li{
     height:70px;
 }
-.menu-container .menu li a,
-.header .menu li a{
+.menu-container .menu>ul>li >a,
+.header .menu >ul>li >a{
     color: #fff;
     padding: 10px 5px;
     display: block;
     position: relative;
     font-size: 12px;
 }
-.menu-container .menu li a{
+.menu-container .menu >ul>li >a{
     line-height:50px;
 }
-.menu-container .menu li a::before,
-.header .menu li a::before{
+.menu-container .menu >ul>li >a::before,
+.header .menu >ul>li >a::before{
     content: '';
     position: absolute;
     height:3px;
@@ -186,16 +184,16 @@ a:active {
     -o-transition: all 0.4s;
     transition: all 0.4s;
 }
-.menu-container .menu li.active a,
-.menu-container .menu li a:hover,
-.header .menu li.active a,
-.header .menu li a:hover{
+.menu-container .menu >ul>li.active> a,
+.menu-container .menu >ul>li >a:hover,
+.header .menu >ul>li.active> a,
+.header .menu >ul>li >a:hover{
     color: #f7c000;
 }
-.menu-container .menu li.active a::before,
-.menu-container .menu li a:hover::before,
-.header .menu li.active a::before,
-.header .menu li a:hover::before{
+.menu-container .menu >ul>li.active >a::before,
+.menu-container .menu >ul>li >a:hover::before,
+.header .menu >ul>li.active >a::before,
+.header .menu >ul>li >a:hover::before{
     background: #f7c000;
 }
 .slider{
@@ -804,4 +802,8 @@ a:active {
     color: #a00;
     font-size: 12px;
     white-space: nowrap;
+}
+
+.dropdown.open .dropdown-menu{
+    display: block;
 }
