--- a/themes/frontend/css/bootstrap-theme.css
+++ b/themes/frontend/css/bootstrap-theme.css
@@ -224,11 +224,11 @@ a:active {
     vertical-align: middle;
 }
 .slider .slide-item img{
-    max-height: 450px;
-    /*max-width: 100%;*/
+    /*max-height: 450px;*/
+    width: 100%;
+    height: auto;
 }
 .slider.owl-carousel .owl-item img{
-    width: auto !important;
     display: inline;
 }
 .slider .owl-dots{
