--- a/themes/frontend/css/bootstrap-theme.css
+++ b/themes/frontend/css/bootstrap-theme.css
@@ -814,5 +814,78 @@ a:active {
     font-size: 12px;
 }
 .gallery-nav{
+    background-color: #f5f5f5;
     margin-bottom: 30px;
+}
+
+.gallery-list{
+    margin: 0 -4px;
+}
+.gallery-item{
+    display: inline-block;
+    float: right;
+    margin: 4px;
+    width: 192px;
+    position: relative;
+}
+.gallery-item .gallery-image{
+    -webkit-box-shadow: 0 0 8px #00000040;
+    -moz-box-shadow: 0 0 8px #00000040;
+    box-shadow: 0 0 8px #00000040;
+}
+
+.gallery-item .gallery-title{
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    max-height: 100%;
+    text-align: center;
+    font-weight: 800;
+    display: block;
+    overflow: hidden;
+    opacity: 0;
+    z-index: 100;
+    font-size: 24px;
+    -webkit-transform: translateY(-50%) scale(2);
+    -moz-transform: translateY(-50%) scale(2);
+    -ms-transform: translateY(-50%) scale(2);
+    -o-transform: translateY(-50%) scale(2);
+    transform: translateY(-50%) scale(2);
+    -webkit-transition: all .3s cubic-bezier(.694, .048, .335, 1) 0s;
+    -moz-transition: all .3s cubic-bezier(.694, .048, .335, 1) 0s;
+    -o-transition: all .3s cubic-bezier(.694, .048, .335, 1) 0s;
+    transition: all .3s cubic-bezier(.694, .048, .335, 1) 0s;
+    visibility: hidden;
+}
+.gallery-item:hover .gallery-title{
+    -webkit-transform: translateY(-50%) scale(1);
+    -moz-transform: translateY(-50%) scale(1);
+    -ms-transform: translateY(-50%) scale(1);
+    -o-transform: translateY(-50%) scale(1);
+    transform: translateY(-50%) scale(1);
+    opacity: 1;
+    visibility: visible;
+}
+.gallery-item .gallery-overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: block;
+    overflow: hidden;
+    visibility: hidden;
+    z-index: 99;
+    background-color: rgba(0,0,0,0.5);
+    -webkit-transition: all .22s cubic-bezier(.694, .048, .335, 1) 0s;
+    -moz-transition: all .22s cubic-bezier(.694, .048, .335, 1) 0s;
+    -o-transition: all .22s cubic-bezier(.694, .048, .335, 1) 0s;
+    transition: all .22s cubic-bezier(.694, .048, .335, 1) 0s;
+    opacity: 0;
+}
+.gallery-item:hover .gallery-overlay{
+    opacity: 1;
+    visibility: visible;
 }
