--- a/themes/frontend/css/bootstrap-theme.css
+++ b/themes/frontend/css/bootstrap-theme.css
@@ -50,8 +50,8 @@ a:active {
     width: 142px;
     height: 142px;
     position: absolute;
-    left: 0;
-    top: 15px;
+    left: 13px;
+    top: 13px;
 }
 .search-icon{
     background: url("../svg/search.svg") no-repeat center;
@@ -831,6 +831,7 @@ a:active {
     margin: 4px;
     width: 192px;
     position: relative;
+    overflow: hidden;
 }
 .gallery-item .gallery-image{
     -webkit-box-shadow: 0 0 8px #00000040;
@@ -851,8 +852,8 @@ a:active {
     display: block;
     overflow: hidden;
     opacity: 0;
-    z-index: 100;
-    font-size: 24px;
+    z-index: 2;
+    font-size: 22px;
     -webkit-transform: translateY(-50%) scale(2);
     -moz-transform: translateY(-50%) scale(2);
     -ms-transform: translateY(-50%) scale(2);
@@ -882,7 +883,7 @@ a:active {
     display: block;
     overflow: hidden;
     visibility: hidden;
-    z-index: 99;
+    z-index: 1;
     background-color: rgba(0,0,0,0.5);
     -webkit-transition: all .22s cubic-bezier(.694, .048, .335, 1) 0s;
     -moz-transition: all .22s cubic-bezier(.694, .048, .335, 1) 0s;
