--- a/themes/frontend/css/bootstrap-theme.css
+++ b/themes/frontend/css/bootstrap-theme.css
@@ -208,7 +208,7 @@ a:active {
 .slider .slide-item{
     position: relative;
     width: 100%;
-    height:450px;
+    /*height:450px;*/
     overflow: hidden;
 }
 .image-container{
