--- a/themes/frontend/css/bootstrap-theme.css
+++ b/themes/frontend/css/bootstrap-theme.css
@@ -213,7 +213,7 @@ a:active {
 }
 .image-container{
     height: 110%;
-    left: -5%;
+    right: -5%;
     position: relative;
     top: -5%;
     width: 110%;
