--- a/themes/frontend/css/responsive-theme.css
+++ b/themes/frontend/css/responsive-theme.css
@@ -1,15 +1,6 @@
-@media screen and (max-width: 767px){
-    .gallery-list{
-        text-align: center;
-    }
-    .gallery-item{
-        float: none;
-    }
-    .top-section{
-        height:232px;
-    }
-    .top-section.inner{
-        height:70px;
+@media screen and (max-width: 1200px){
+    .menu-container.on-top{
+        top: 0;
     }
     .header{
         padding-top: 70px;
@@ -19,20 +10,6 @@
         width: 100%;
         top: auto;
         margin: 15px 0;
-    }
-    .search-container{
-        float: none;
-        width: 100%;
-    }
-    .slider .slide-item{
-        height:200px;
-        height:auto;
-    }
-    .slider .slide-item img{
-        max-height:200px;
-    }
-    .menu-container.on-top{
-        top: 0;
     }
     .menu-container .menu{
         overflow: scroll;
@@ -80,6 +57,44 @@
         padding: 10px 15px;
         font-size: 13px;
     }
+    .menu-container .menu >ul>li >a::before{
+        width: 3px;
+        height:100%;
+        border-radius: 3px 0 0 3px;
+    }
+}
+@media screen and (max-width: 767px){
+    .vertical-slider{
+        background-color: #fff;
+        height: 37px;
+        line-height: 37px;
+        padding: 0 15px;
+        font-size:12px;
+    }
+    .gallery-list{
+        text-align: center;
+    }
+    .gallery-item{
+        float: none;
+    }
+    .top-section{
+        height:232px;
+    }
+    .top-section.inner{
+        height:70px;
+    }
+    .search-container{
+        float: none;
+        width: 100%;
+    }
+    .slider .slide-item{
+        height:200px;
+        height:auto;
+    }
+    .slider .slide-item img{
+        max-height:200px;
+    }
+
     .about-section,
     .services-section{
         padding: 30px 0;
@@ -175,11 +190,6 @@
     }
     .context{
         padding: 30px 0;
-    }
-    .menu-container .menu >ul>li >a::before{
-        width: 3px;
-        height:100%;
-        border-radius: 3px 0 0 3px;
     }
     .menu-container .dropdown-menu{
         position: relative;
