--- a/themes/frontend/css/bootstrap-theme.css
+++ b/themes/frontend/css/bootstrap-theme.css
@@ -267,6 +267,7 @@ a:active {
     background-size: cover;
     margin-top: 2px;
 }
+.video-gallery-section h2,
 .about-section h2,
 .services-section h2{
     color: #5f7cbe;
@@ -274,6 +275,7 @@ a:active {
     margin-bottom: 70px;
     margin-top: 0;
 }
+.video-gallery-section h2 small,
 .about-section h2 small,
 .services-section h2 small{
     color: #5f7cbe;
@@ -830,6 +832,7 @@ a:active {
     padding: 4px 15px !important;
     border-radius: 0 !important;
     font-size: 12px;
+    line-height: 30px;
 }
 .gallery-nav{
     background-color: #f5f5f5;
@@ -931,4 +934,74 @@ a:active {
 }
 .inline-block{
     display: inline-block !important;
+}
+
+.video-list .embed-code{
+    width: 100%;
+    height: auto;
+}
+.video-list .embed-code iframe{
+    max-width: 100%;
+    height: 400px;
+}
+.video-gallery-section h2{
+    color: #333;
+    margin-bottom: 0;
+    margin-top: 245px;
+}
+.video-gallery-section h2 small{
+    color: #333;
+}
+.video-list .video-item h4 {
+    color: #333;
+    line-height: 25px;
+    margin-bottom: 0;
+}
+.video-list .video-item h4 small{
+    display: block;
+    margin-top: 10px;
+}
+.video-gallery-section{
+    padding: 70px 0;
+}
+.video-gallery-section .video-list{
+    position: relative;
+}
+.video-gallery-section .owl-theme .owl-nav{
+    position: absolute;
+    top: 200px;
+    width: 100%;
+    height: 80px;
+    margin-top: -40px;
+}
+.video-list.owl-carousel .owl-nav button.owl-next,
+.video-list.owl-carousel .owl-nav button.owl-prev{
+    position: absolute;
+    right: -60px;
+    width: 40px;
+    height: 80px;
+    color: #fff;
+}
+.video-list.owl-carousel .owl-nav button.owl-next{
+    right: auto;
+    left: -60px;
+}
+.video-list.owl-carousel .owl-nav button.owl-prev span,
+.video-list.owl-carousel .owl-nav button.owl-next span{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+.video-list.owl-carousel .owl-nav button.owl-next span{
+    background: url("../svg/next.svg") no-repeat center;
+    background-size: 60px;
+}
+.video-list.owl-carousel .owl-nav button.owl-prev span{
+    background: url("../svg/prev.svg") no-repeat center;
+    background-size: 60px;
+}
+.video-list.owl-theme .owl-nav [class*=owl-]:hover{
+    background: transparent;
 }
