--- a/themes/frontend/css/bootstrap-theme.css
+++ b/themes/frontend/css/bootstrap-theme.css
@@ -943,6 +943,10 @@ a:active {
     font-size:12px;
 }
 
+.inner .vertical-slider{
+    border-bottom: 1px solid #666;
+}
+
 .toranj-icon{
     display:inline-block;
     background: url("../svg/arabic-art.svg") no-repeat scroll center transparent;
