--- a/themes/frontend/js/ticker/css/ticker.css
+++ b/themes/frontend/js/ticker/css/ticker.css
@@ -36,6 +36,7 @@
 	overflow: hidden;
 	white-space: nowrap;
 	/*line-height: 1.2em;*/
+	font-size: 15px;
 }
 .ticker-content a {
 	text-decoration: none;	
